[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coix"
authors = [
    {name = "Coix Contributors", email = "phandu@google.com"},
]
description = "Inference Combinators in JAX"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["probabilistic machine learning bayesian statistics"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jax",
	"jaxlib",
    "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
cascades = ["cascades"]
numpyro = ["numpyro"]
oryx = ["oryx"]
